# XENETA_DB_PROJECT

./: README.md  pyproject.toml
database_load_script/: batch_load.py  initial_db_setup.py  static_data_load.py  xeneta_dbutil.py
lane_price_estimation/: dbt_project.yml
lane_price_estimation/analyses/: get_aggregate_by_port_id.sql  get_aggregate_by_region.sql  get_latest_counter.sql
lane_price_estimation/macros/: create_counter_table.sql  get_custom_schema.sql  pre_hook_counter.sql
lane_price_estimation/models/: schema.yml  sources.yml
lane_price_estimation/models/final/: charges_aggregated_by_day.sql  data_quality_by_coverage.sql  datapoint_total_charge_by_day.sql
lane_price_estimation/models/raw/: raw_charges_model.sql  raw_datapoints_model.sql  raw_exchange_rates_model.sql  raw_ports_model.sql  raw_regions_model.sql
lane_price_estimation/models/stage/: stage_charges_model.sql  stage_datapoints_model.sql  stage_exchange_rates_model.sql  stage_ports_error_model.sql  stage_ports_model.sql  stage_regions_model.sql
