[tool.poetry]
name = "xeneta-db-project"
version = "0.1.0"
description = ""
authors = ["Mukesh Madesia <avtar.mukesh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-duckdb = "1.7.4"
duckdb = "0.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
